Building input values and refactored validation

--- a/index.html
+++ b/index.html
@@ -94,18 +94,42 @@
             <label for="ddlBuilding" class="lblInput">Building</label>
             <select name="ddlBuilding" id="ddlBuilding" class="form-control">
                 <option selected="selected" value=""></option>
-                <option value="d021631b-705b-49be-ba7b-cbbe701f87b3">Administration Building</option>
-                <option value="3cdaf42d-fac6-4524-b794-d845d6ff7461">Lee Kong Chian School of Business</option>
-                <option value="cc241ad7-6820-44e1-8ec3-f6918993865c">School of Accountancy</option>
-                <option value="80193070-0c85-4653-90cc-3147008a96ac">Li Ka Shing Library</option>
-                <option value="78596236-635c-4ed4-b476-9aaee648d708">SMU Connexion</option>
-                <option value="2174627c-98c8-474a-8186-96f6ec7db869">Campus Open Spaces - Events/Activities</option>
-                <option value="9a4a3373-ad3f-468f-8fcb-c5cbfce7618f">Concourse - Room/Lab</option>
-                <option value="86e69943-2daa-43cb-955c-5b6712f2d508">Prinsep Street Residences</option>
-                <option value="fb570b01-1d7f-4651-8678-eea051b3e8f0">School of Computing &amp;Information Systems 1</option>
-                <option value="b3b98f22-1294-4a10-a565-9f92bff3dcfd">School of Economics/School of Computing &amp;Information Systems 2</option>
-                <option value="e82f5df7-2058-4bf8-a69c-8ad7ac39da08">School of Social Sciences/College of Integrative Studies</option>
-                <option value="3e721137-7469-4d9d-ad1c-592af44c3975">Yong Pung How School of Law/Kwa Geok Choo Law Library</option>
+                <option value="Administration Building">
+                    Administration Building
+                </option>
+                <option value="Lee Kong Chian School of Business">
+                    Lee Kong Chian School of Business
+                </option>
+                <option value="School of Accountancy">
+                    School of Accountancy
+                </option>
+                <option value="Li Ka Shing Library">
+                    Li Ka Shing Library
+                </option>
+                <option value="SMU Connexion">
+                    SMU Connexion
+                </option>
+                <option value="Campus Open Spaces - Events/Activities">
+                    Campus Open Spaces - Events/Activities
+                </option>
+                <option value="Concourse - Room/Lab">
+                    Concourse - Room/Lab
+                </option>
+                <option value="Prinsep Street Residences">
+                    Prinsep Street Residences
+                </option>
+                <option value="School of Computing &amp; Information Systems 1">
+                    School of Computing &amp; Information Systems 1
+                </option>
+                <option value="School of Economics/School of Computing &amp; Information Systems 2">
+                    School of Economics/School of Computing &amp; Information Systems 2
+                </option>
+                <option value="School of Social Sciences/College of Integrative Studies">
+                    School of Social Sciences/College of Integrative Studies
+                </option>
+                <option value="Yong Pung How School of Law/Kwa Geok Choo Law Library">
+                    Yong Pung How School of Law/Kwa Geok Choo Law Library
+                </option>
             </select>
         </div>
         <div class="clearfix"></div>
