Overlay form minor logic update

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         <br>
         <div class="col-lg-6">
             <label for="txtLastFour" class="lblInput">Last 4 characters of ID</label>
-            <input name="txtLastFour" type="text" maxlength="4" id="txtLastFour" class="form-control specialChar" placeholder="e.g. 567A">
+            <input name="txtLastFour" type="text" maxlength="4" id="txtLastFour" class="form-control specialChar" placeholder="e.g. 567A" autocomplete="on">
         </div>
         <div class="clearfix"></div>
         <br>
         <div class="col-lg-12">
             <label for="txtName" class="lblInput">Name as in ID</label>
-            <input name="txtName" type="text" maxlength="255" id="txtName" class="form-control" placeholder="e.g. John Tan">
+            <input name="txtName" type="text" maxlength="255" id="txtName" class="form-control" placeholder="e.g. John Tan" autocomplete="on">
         </div>
         <div class="clearfix"></div>
         <br>
